--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Beranda | Izzatunnisa kost and paviliun index berisi ringkasan halaman
-      lain, gambar2 utama halaman lain
+      gallery berisi foto-foto kegiatan, bangunan kondisi Izzatunnisa
     </title>
   </head>
   <body>
@@ -31,24 +30,8 @@
           </ul>
         </div>
       </nav>
-      <div id="showcase">
-        <div class="container">
-          <h1>Ringkasan</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis
-            obcaecati voluptatum aliquid, corporis repellendus similique.
-          </p>
-          <a href="" class="btn">Tentang</a>
-        </div>
-      </div>
     </header>
-    <main>
-      <div id="introduction">
-        <ul>
-          <li></li>
-        </ul>
-      </div>
-    </main>
+    <main></main>
     <footer>
       <div id="social-gallery"></div>
       <div id="copyright">
