--- a/pages/tentang.html
+++ b/pages/tentang.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>
+      about menceritakan sejarah hotel, lokasinhtel, visi misi konsep
+    </title>
   </head>
   <body>
+    <header>
+      <nav id="navbar">
+        <div class="container">
+          <h1 class="logo"><a href="index.html">IKV</a></h1>
+          <ul>
+            <li><a href="#" class="current">Beranda</a></li>
+            <li><a href="#">Tentang</a></li>
+            <li>
+              Services
+              <ul>
+                <li><a href="#">Kost</a></li>
+                <li><a href="#">paviliun</a></li>
+                <li><a href="#">Ruko</a></li>
+              </ul>
+            </li>
+            <li><a href="#">kegiatan</a></li>
+            <li><a href="#">Hubungi Kami</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
     <section id="about-info" class="bg-light py-3">
       <div class="container">
         <div class="info-left">
