--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Beranda | Izzatunnisa kost and paviliun index berisi ringkasan halaman
-      lain, gambar2 utama halaman lain
+      Beranda | Izzatunnisa kost and paviliun
     </title>
   </head>
   <body>
@@ -18,7 +17,7 @@
             <li><a href="#" class="current">Beranda</a></li>
             <li><a href="#">Tentang</a></li>
             <li>
-              Services
+              layanan
               <ul>
                 <li><a href="#">Kost</a></li>
                 <li><a href="#">paviliun</a></li>
@@ -33,7 +32,7 @@
       </nav>
       <div id="showcase">
         <div class="container">
-          <h1>Ringkasan</h1>
+          <h7>Ringkasan</h7>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis
             obcaecati voluptatum aliquid, corporis repellendus similique.
@@ -43,13 +42,36 @@
       </div>
     </header>
     <main>
-      <div id="introduction">
+      <div id="introduction of all service">
+        <ul>
+          <li></li>
+        </ul>
+      </div>
+      <div id="common benefit">
         <ul>
           <li></li>
         </ul>
       </div>
     </main>
     <footer>
+      <div id="small-nav">
+        <ul>
+          <li>
+             <ul>
+              <li>home</li>
+              <li>Tentang</li>
+              <li>gallery</li>
+            </ul>
+          </li>
+          <li>
+          <ul>
+            <li>kost</li>
+            <li>paviliun</li>
+            <li>ruko</li>
+          </ul>
+          </li>
+        <ul>
+      </div>
       <div id="social-gallery"></div>
       <div id="copyright">
         <p>Hotel BT &copy; 2019, All RIghts Reserved</p>
