index focused little update

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css">
+    <meta name="author" content="ibrahim hasan abdurrahman">
     <title>
       Beranda | Izzatunnisa kost and paviliun
     </title>
@@ -16,8 +18,7 @@
           <ul>
             <li><a href="#" class="current">Beranda</a></li>
             <li><a href="#">Tentang</a></li>
-            <li>
-              layanan
+            <li>layanan
               <ul>
                 <li><a href="#">Kost</a></li>
                 <li><a href="#">paviliun</a></li>
@@ -32,26 +33,45 @@
       </nav>
       <div id="showcase">
         <div class="container">
-          <h7>Ringkasan</h7>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis
-            obcaecati voluptatum aliquid, corporis repellendus similique.
+          <div class="showcase-content">
+          <h1>Produk  <span class="brand-text">Kami</span></h1>
+          <p class="lead-words">
+            izzatunnisa kost and paviliun adalah kompleks bangunan yang terdiri dari bangunan kost, paviliun, dan ruko. berada pada satu gedung yang terintegrasi.
           </p>
-          <a href="" class="btn">Tentang</a>
+          <a href="pages/tentang.html" class="btn">Tentang</a>
         </div>
+      </div>
       </div>
     </header>
     <main>
-      <div id="introduction of all service">
-        <ul>
-          <li></li>
-        </ul>
-      </div>
-      <div id="common benefit">
-        <ul>
-          <li></li>
-        </ul>
-      </div>
+      <section id="home-info-1">
+          <div class="container benefit-1">
+            <div class="benefit-1-img">pic 1</div>
+            <div class="benefit-1-desc"></div>
+          </div>
+          <div class="container info-2">
+            <div class="benefit-2-img">pic 2</div>
+            <div class="benefit-2-desc"></div>
+          </div>
+          <div class="container info-3">
+            <div class="benefit-3-img">pic 3</div>
+            <div class="benefit-3-desc"></div>
+          </div>
+        </section>
+      <section id="common benefit">
+        <div class="container benefit-1">
+          <div class="benefit-1-img">pic 1</div>
+          <div class="benefit-1-desc"></div>
+        </div>
+        <div class="container info-2">
+          <div class="benefit-2-img">pic 2</div>
+          <div class="benefit-2-desc"></div>
+        </div>
+        <div class="container info-3">
+          <div class="benefit-3-img">pic 3</div>
+          <div class="benefit-3-desc"></div>
+        </div>
+      </section>
     </main>
     <footer>
       <div id="small-nav">
@@ -60,7 +80,7 @@
              <ul>
               <li>home</li>
               <li>Tentang</li>
-              <li>gallery</li>
+              <li>promo</li>
             </ul>
           </li>
           <li>
@@ -70,11 +90,18 @@
             <li>ruko</li>
           </ul>
           </li>
+          <li>
+            <ul>
+              <li>gallery</li>
+              <li>contact</li>
+            </ul>
+            </li>
         <ul>
       </div>
-      <div id="social-gallery"></div>
+      <div id="social-links">
+      </div>
       <div id="copyright">
-        <p>Hotel BT &copy; 2019, All RIghts Reserved</p>
+        <p>Izzatunnisa &copy; 2023, All RIghts Reserved</p>
       </div>
     </footer>
   </body>
