--- a/pages/service-kost.html
+++ b/pages/service-kost.html
@@ -74,7 +74,10 @@
         </div>
       </section>
       <section id="gallery"></section>
-      <section id="biaya"></section>
+      <section id="biaya">
+        <div><p>biaya normal</p></div>
+        <div><p>paket</p></div>
+      </section>
     </main>
     <footer>
       <div id="bottom-navigation"></div>
