--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div id="showcase">
         <div class="container">
           <div class="showcase-content">
-          <h1>Produk  <span class="brand-text">Kami</span></h1>
+          <h1><span class="brand-text">Produk</span>  Kami</h1>
           <p class="lead-words">
             izzatunnisa kost and paviliun adalah kompleks bangunan yang terdiri dari bangunan kost, paviliun, dan ruko. berada pada satu gedung yang terintegrasi.
           </p>
@@ -44,35 +44,53 @@
       </div>
     </header>
     <main>
-      <section id="home-info-1">
-          <div class="container benefit-1">
-            <div class="benefit-1-img">pic 1</div>
-            <div class="benefit-1-desc"></div>
-          </div>
-          <div class="container info-2">
-            <div class="benefit-2-img">pic 2</div>
-            <div class="benefit-2-desc"></div>
-          </div>
-          <div class="container info-3">
-            <div class="benefit-3-img">pic 3</div>
-            <div class="benefit-3-desc"></div>
-          </div>
-        </section>
-      <section id="common benefit">
-        <div class="container benefit-1">
-          <div class="benefit-1-img">pic 1</div>
-          <div class="benefit-1-desc"></div>
+      <section id="home-info">
+        <div id="home-info-1">
+              <div class="info-1-img"></div>
+              <div class="info-1-desc">
+                <h2>Kost <span class="brand-text">Izzatunnisa</span></h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos, debitis! Omnis aut nesciunt assumenda earum, porro illo dolor harum ipsam.</p>
+              <a href="./pages/service-kost.html" class="btn btn-dark">lebih lanjut</a>
+              </div>
         </div>
-        <div class="container info-2">
-          <div class="benefit-2-img">pic 2</div>
-          <div class="benefit-2-desc"></div>
+        <div id="home-info-2">
+          <div class="info-2-img"></div>
+          <div class="info-2-desc">
+            <h2>Paviliun <span class="brand-text">Izzatunnisa</span></h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos, debitis! Omnis aut nesciunt assumenda earum, porro illo dolor harum ipsam.</p>
+          <a href="./pages/service-paviliun.html" class="btn btn-dark">lebih lanjut</a>
+          </div>
         </div>
-        <div class="container info-3">
-          <div class="benefit-3-img">pic 3</div>
-          <div class="benefit-3-desc"></div>
+        <div id="home-info-3">
+        <div class="info-3-img"></div>
+        <div class="info-3-desc">
+          <h2>Ruko <span class="brand-text">Izzatunnisa</span></h2>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos, debitis! Omnis aut nesciunt assumenda earum, porro illo dolor harum ipsam.</p>
+        <a href="./pages/service-ruko.html" class="btn btn-dark">lebih lanjut</a>
+        </div>
         </div>
       </section>
+      <section id="home-benefit">
+              <div class="box bg-dark">
+                <img src="./img/logo/fitur/archery-target-svgrepo-com.svg" alt="lokasi">
+                <h3>Dekat Kampus</h3>
+                <p>Terletak dekat dengan kampus Universitas Muhammadiyah Ssurakarta (UMS) dan International Hotel School (IHS)</p>
+              </div>
+              <div class="box bg-light">
+                <img src="./img/logo/fitur/ball-svgrepo-com.svg" alt="transportasi">
+                <h3>Dekat Bandara, Tol, dan Terminal</h3>
+                <p>Terletak di kelurahan gonilan yang dekat dengan bandara adi sucipto, terminal kartasura, dan pintu tol boyolali</p>
+              </div>
+              <div class="box bg-dark">
+                <img src="./img/logo/fitur/arson-svgrepo-com.svg" alt="motor">
+                <h3>Parkir Motor</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos, labore.</p>
+              </div>
+              <div class="clr"></div>
+      </section>
+
     </main>
+    
     <footer>
       <div id="small-nav">
         <ul>
@@ -97,6 +115,7 @@
             </ul>
             </li>
         <ul>
+          <div class="clr"></div>
       </div>
       <div id="social-links">
       </div>
