still working in the index css

--- a/index.html
+++ b/index.html
@@ -16,18 +16,19 @@
         <div class="container">
           <h1 class="logo"><a href="index.html">IKV</a></h1>
           <ul>
-            <li><a href="#" class="current">Beranda</a></li>
-            <li><a href="#">Tentang</a></li>
-            <li>layanan
+            <li><a href="./index.html" class="current">Beranda</a></li>
+            <li><a href="./pages/tentang.html">Tentang</a></li>
+            <li><a href="#"> layanan <img src="./img/logo/nav/down.png" alt="dropdown">
               <ul>
-                <li><a href="#">Kost</a></li>
-                <li><a href="#">paviliun</a></li>
-                <li><a href="#">Ruko</a></li>
+                <li><a href="./pages/service-kost.html">Kost</a></li>
+                <li><a href="./pages/service-paviliun.html">paviliun</a></li>
+                <li><a href="./pages/service-ruko.html">Ruko</a></li>
               </ul>
+            </a>
             </li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Paket&promo</a></li>
-            <li><a href="#">Pusat Bantuan</a></li>
+            <li><a href="./pages/gallery.html">Gallery</a></li>
+            <li><a href="./pages/paket.html">Paket&promo</a></li>
+            <li><a href="./pages/contact.html">Pusat Bantuan</a></li>
           </ul>
         </div>
       </nav>
@@ -96,22 +97,21 @@
         <ul>
           <li>
              <ul>
-              <li>home</li>
-              <li>Tentang</li>
-              <li>promo</li>
+              <li><a href="./pages/tentang.html">Tentang</a></li>
+              <li><a href="./pages/paket.html">promo</a></li>
             </ul>
           </li>
           <li>
           <ul>
-            <li>kost</li>
-            <li>paviliun</li>
-            <li>ruko</li>
+            <li><a href="./pages/service-kost.html">kost</a></li>
+            <li><a href="./pages/service-paviliun.html"> paviliun</a></li>
+            <li><a href="./pages/service-ruko.html"> ruko</a></li>
           </ul>
           </li>
           <li>
             <ul>
-              <li>gallery</li>
-              <li>contact</li>
+              <li><a href="./pages/gallery.html"> gallery</a></li>
+              <li><a href="./pages/contact.html"> contact</a></li>
             </ul>
             </li>
         <ul>
