--- a/pages/service-kost.html
+++ b/pages/service-kost.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css">
+    <meta name="author" content="ibrahim hasan abdurrahman">
     <title>
-      servis menampilkan lorong, kulkas parkir, wifi, gerbang kamar mandi dalam
+      Beranda | Izzatunnisa kost and paviliun
     </title>
   </head>
   <body>
@@ -16,8 +18,7 @@
           <ul>
             <li><a href="#" class="current">Beranda</a></li>
             <li><a href="#">Tentang</a></li>
-            <li>
-              Services
+            <li>layanan
               <ul>
                 <li><a href="#">Kost</a></li>
                 <li><a href="#">paviliun</a></li>
@@ -32,57 +33,94 @@
       </nav>
       <div id="showcase">
         <div class="container">
-          <h1>Ringkasan</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis
-            obcaecati voluptatum aliquid, corporis repellendus similique.
+          <div class="showcase-content">
+          <h1><span class="brand-text">Produk</span>  Kami</h1>
+          <p class="lead-words">
+            izzatunnisa kost and paviliun adalah kompleks bangunan yang terdiri dari bangunan kost, paviliun, dan ruko. berada pada satu gedung yang terintegrasi.
           </p>
-          <a href="" class="btn">Tentang</a>
+          <a href="pages/tentang.html" class="btn">Tentang</a>
         </div>
+      </div>
       </div>
     </header>
     <main>
-      <section id="fasilitas">
-        <div>
-          <p>apa yang kamu dapatkan</p>
+      <section id="home-info">
+        <div id="home-info-1">
+              <div class="info-1-img"></div>
+              <div class="info-1-desc">
+                <h2>Kost <span class="brand-text">Izzatunnisa</span></h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos, debitis! Omnis aut nesciunt assumenda earum, porro illo dolor harum ipsam.</p>
+              <a href="./pages/service-kost.html" class="btn btn-dark">lebih lanjut</a>
+              </div>
         </div>
-        <div class="container">
-          <div class="box bg-light">
-            <i class="fas fa-hotel fa-3x"></i>
-            <h3>Great Location</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut,
-              omnis?
-            </p>
-          </div>
-          <div class="box bg-primary">
-            <i class="fas fa-utensils fa-3x"></i>
-            <h3>Free Meals</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut,
-              omnis?
-            </p>
-          </div>
-          <div class="box bg-light">
-            <i class="fas fa-dumbbell fa-3x"></i>
-            <h3>Fitness Room</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut,
-              omnis?
-            </p>
+        <div id="home-info-2">
+          <div class="info-2-img"></div>
+          <div class="info-2-desc">
+            <h2>Paviliun <span class="brand-text">Izzatunnisa</span></h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos, debitis! Omnis aut nesciunt assumenda earum, porro illo dolor harum ipsam.</p>
+          <a href="./pages/service-paviliun.html" class="btn btn-dark">lebih lanjut</a>
           </div>
         </div>
+        <div id="home-info-3">
+        <div class="info-3-img"></div>
+        <div class="info-3-desc">
+          <h2>Ruko <span class="brand-text">Izzatunnisa</span></h2>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos, debitis! Omnis aut nesciunt assumenda earum, porro illo dolor harum ipsam.</p>
+        <a href="./pages/service-ruko.html" class="btn btn-dark">lebih lanjut</a>
+        </div>
+        </div>
       </section>
-      <section id="gallery"></section>
-      <section id="biaya">
-        <div><p>biaya normal</p></div>
-        <div><p>paket</p></div>
+      <section id="home-benefit">
+              <div class="box bg-dark">
+                <img src="./img/logo/fitur/archery-target-svgrepo-com.svg" alt="lokasi">
+                <h3>Dekat Kampus</h3>
+                <p>Terletak dekat dengan kampus Universitas Muhammadiyah Ssurakarta (UMS) dan International Hotel School (IHS)</p>
+              </div>
+              <div class="box bg-light">
+                <img src="./img/logo/fitur/ball-svgrepo-com.svg" alt="transportasi">
+                <h3>Dekat Bandara, Tol, dan Terminal</h3>
+                <p>Terletak di kelurahan gonilan yang dekat dengan bandara adi sucipto, terminal kartasura, dan pintu tol boyolali</p>
+              </div>
+              <div class="box bg-dark">
+                <img src="./img/logo/fitur/arson-svgrepo-com.svg" alt="motor">
+                <h3>Parkir Motor</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos, labore.</p>
+              </div>
+              <div class="clr"></div>
       </section>
+
     </main>
+    
     <footer>
-      <div id="bottom-navigation"></div>
+      <div id="small-nav">
+        <ul>
+          <li>
+             <ul>
+              <li><a href="index.html">home</a></li>
+              <li><a href="./pages/tentang.html">Tentang</a></li>
+              <li><a href="./pages/paket.html">promo</a></li>
+            </ul>
+          </li>
+          <li>
+          <ul>
+            <li><a href="./pages/service-kost.html">kost</a></li>
+            <li><a href="./pages/service-paviliun.html"> paviliun</a></li>
+            <li><a href="./pages/service-ruko.html"> ruko</a></li>
+          </ul>
+          </li>
+          <li>
+            <ul>
+              <li><a href="./pages/gallery.html"> gallery</a></li>
+              <li><a href="./pages/contact.html"> contact</a></li>
+            </ul>
+            </li>
+        <ul>
+          <div class="clr"></div>
+      </div>
+      <div id="social-links">
+      </div>
       <div id="copyright">
-        <p>Hotel BT &copy; 2019, All RIghts Reserved</p>
+        <p>Izzatunnisa &copy; 2023, All RIghts Reserved</p>
       </div>
     </footer>
   </body>
