--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css">
-    <meta name="author" content="ibrahim hasan abdurrahman">
     <title>
       Beranda | Izzatunnisa kost and paviliun
     </title>
+<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <header>
       <nav id="navbar">
-        <div class="container">
           <h1 class="logo"><a href="index.html">IKV</a></h1>
           <ul>
             <li><a href="./index.html" class="current">Beranda</a></li>
@@ -30,7 +29,6 @@
             <li><a href="./pages/paket.html">Paket&promo</a></li>
             <li><a href="./pages/contact.html">Pusat Bantuan</a></li>
           </ul>
-        </div>
       </nav>
       <div id="showcase">
         <div class="container">
