still with index

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
           <ul>
             <li><a href="./index.html" class="current">Beranda</a></li>
             <li><a href="./pages/tentang.html">Tentang</a></li>
-            <li><a href="#"> layanan <img src="./img/logo/nav/down.png" alt="dropdown">
+            <li class="dropdown">Layanan
               <ul>
                 <li><a href="./pages/service-kost.html">Kost</a></li>
                 <li><a href="./pages/service-paviliun.html">paviliun</a></li>
                 <li><a href="./pages/service-ruko.html">Ruko</a></li>
               </ul>
-            </a>
-            </li>
+              </li>
             <li><a href="./pages/gallery.html">Gallery</a></li>
             <li><a href="./pages/paket.html">Paket&promo</a></li>
             <li><a href="./pages/contact.html">Pusat Bantuan</a></li>
+
           </ul>
       </nav>
       <div id="showcase">
@@ -113,8 +113,9 @@
             </ul>
             </li>
         <ul>
-          <div class="clr"></div>
+
       </div>
+      <div class="clr"></div>
       <div id="social-links">
       </div>
       <div id="copyright">
