--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- meta -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- link -->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <!-- title -->
     <title>
       Beranda | Izzatunnisa kost and paviliun
     </title>
-<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
   </head>
   <body>
+    <!-- header -->
     <header>
       <nav id="navbar">
           <h1 class="logo"><a href="index.html">IKV</a></h1>
           <ul>
             <li><a href="./index.html" class="current">Beranda</a></li>
             <li><a href="./pages/tentang.html">Tentang</a></li>
-            <li class="dropdown">Layanan
-              <ul>
+            <li class="dropdown"><a href="#"> Layanan &darr;</a>
+              <ul class="dropdown-content">
                 <li><a href="./pages/service-kost.html">Kost</a></li>
                 <li><a href="./pages/service-paviliun.html">paviliun</a></li>
                 <li><a href="./pages/service-ruko.html">Ruko</a></li>
@@ -27,8 +31,8 @@
             <li><a href="./pages/gallery.html">Gallery</a></li>
             <li><a href="./pages/paket.html">Paket&promo</a></li>
             <li><a href="./pages/contact.html">Pusat Bantuan</a></li>
-
           </ul>
+          <div class="clr"></div>
       </nav>
       <div id="showcase">
         <div class="container">
@@ -42,6 +46,7 @@
       </div>
       </div>
     </header>
+    <!-- main-section -->
     <main>
       <section id="home-info">
         <div id="home-info-1">
@@ -89,7 +94,7 @@
       </section>
 
     </main>
-    
+    <!-- footer -->
     <footer>
       <div id="small-nav">
         <ul>
