--- a/index.html
+++ b/index.html
@@ -1,39 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- meta -->
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- link -->
+    <!-- links -->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/showcase.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/home-info.css">
+    <link rel="stylesheet" href="css/home-benefit.css">
+    <link rel="stylesheet" href="css/kost-info.css">
+    <link rel="stylesheet" href="css/kost-benefit.css">
+    <link rel="stylesheet" href="css/paviliun-info.css">
+    <link rel="stylesheet" href="css/paviliun-benefit.css">
+    <link rel="stylesheet" href="css/ruko-info.css">
+    <link rel="stylesheet" href="css/ruko-benefit.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <!-- title -->
     <title>
       Beranda | Izzatunnisa kost and paviliun
     </title>
   </head>
+  <!--body-->
   <body>
     <!-- header -->
     <header>
+      <!-- navbar -->
       <nav id="navbar">
           <h1 class="logo"><a href="index.html">IKV</a></h1>
-          <ul>
-            <li><a href="./index.html" class="current">Beranda</a></li>
-            <li><a href="./pages/tentang.html">Tentang</a></li>
-            <li class="dropdown"><a href="#"> Layanan &darr;</a>
+          <ul class="navbar-main">
+            <li class="navbar-item"><a  href="./index.html" class="current-page">Beranda</a></li>
+            <li class="navbar-item"><a  href="./pages/tentang.html">Tentang</a></li>
+            <li class="navbar-item"><a  href="./pages/blogs.html">Blogs</a></li>
+            <li class="dropdown navbar-item"><a href="#"> Layanan</a>
               <ul class="dropdown-content">
-                <li><a href="./pages/service-kost.html">Kost</a></li>
-                <li><a href="./pages/service-paviliun.html">paviliun</a></li>
-                <li><a href="./pages/service-ruko.html">Ruko</a></li>
+                <li class="dropdown-item"><a  href="./pages/service-kost.html">Kost</a></li>
+                <li class="dropdown-item"><a  href="./pages/service-paviliun.html">paviliun</a></li>
+                <li class="dropdown-item"><a  href="./pages/service-ruko.html">Ruko</a></li>
               </ul>
               </li>
-            <li><a href="./pages/gallery.html">Gallery</a></li>
-            <li><a href="./pages/paket.html">Paket&promo</a></li>
-            <li><a href="./pages/contact.html">Pusat Bantuan</a></li>
+            <li class="navbar-item"><a  href="./pages/gallery.html">Gallery</a></li>
+            <li class="navbar-item"><a  href="./pages/paket.html">Paket&promo</a></li>
+            <li class="navbar-item"><a  href="./pages/contact.html">Pusat Bantuan</a></li>
           </ul>
-          <div class="clr"></div>
-      </nav>
+      <!-- clear navbar float class -->
+      <div class="clr"></div>
+        </nav>
+      <!-- showcase -->
       <div id="showcase">
         <div class="container">
           <div class="showcase-content">
@@ -46,14 +58,14 @@
       </div>
       </div>
     </header>
-    <!-- main-section -->
+    <!-- main-sections -->
     <main>
       <section id="home-info">
         <div id="home-info-1">
               <div class="info-1-img"></div>
               <div class="info-1-desc">
-                <h2>Kost <span class="brand-text">Izzatunnisa</span></h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos, debitis! Omnis aut nesciunt assumenda earum, porro illo dolor harum ipsam.</p>
+                <h2>Kost Putri<span class="brand-text">Izzatunnisa</span></h2>
+                <p>Menyediakan 42 kamar kost yang masing masing bisa berisi 1-3 orang. ada yang membersihkan lorong. grup kosan. dilarang mengajak teman pria</p>
               <a href="./pages/service-kost.html" class="btn btn-dark">lebih lanjut</a>
               </div>
         </div>
@@ -61,7 +73,7 @@
           <div class="info-2-img"></div>
           <div class="info-2-desc">
             <h2>Paviliun <span class="brand-text">Izzatunnisa</span></h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos, debitis! Omnis aut nesciunt assumenda earum, porro illo dolor harum ipsam.</p>
+            <p>Tersedia 4 kamar paviliun untuk digunakan seperti hotel atau kamar harian</p>
           <a href="./pages/service-paviliun.html" class="btn btn-dark">lebih lanjut</a>
           </div>
         </div>
@@ -69,7 +81,7 @@
         <div class="info-3-img"></div>
         <div class="info-3-desc">
           <h2>Ruko <span class="brand-text">Izzatunnisa</span></h2>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos, debitis! Omnis aut nesciunt assumenda earum, porro illo dolor harum ipsam.</p>
+          <p>Tersedia 2 buah toko yang bisa disewa. ukuran 3x2 meter. tidak ada kamar mandi. kuma 3 meter berupa bukaan dengan gerbang</p>
         <a href="./pages/service-ruko.html" class="btn btn-dark">lebih lanjut</a>
         </div>
         </div>
@@ -88,11 +100,11 @@
               <div class="box bg-dark">
                 <img src="./img/logo/fitur/arson-svgrepo-com.svg" alt="motor">
                 <h3>Parkir Motor</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos, labore.</p>
+                <p>Tersedia parkiran motor yang cukup untuk puluhan motor. Tidak tersedia parkir mobil kecuali sementara</p>
               </div>
-              <div class="clr"></div>
+      <!-- clear home benefits float class -->
+      <div class="clr"></div>
       </section>
-
     </main>
     <!-- footer -->
     <footer>
@@ -118,9 +130,9 @@
             </ul>
             </li>
         <ul>
-
-      </div>
+      <!-- clear small-nav float class -->
       <div class="clr"></div>
+      </div>
       <div id="social-links">
       </div>
       <div id="copyright">
