i think i better create a new smaller project then inputs ideas or updates from this one

--- a/pages/service-kost.html
+++ b/pages/service-kost.html
@@ -31,7 +31,7 @@
           </ul>
         </div>
       </nav>
-      <div id="showcase">
+      <div id="showcase showcase-Services">
         <div class="container">
           <div class="showcase-content">
           <h1><span class="brand-text">Produk</span>  Kami</h1>
