--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- links -->
+    <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/showcase.css">
-    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/home-info.css">
     <link rel="stylesheet" href="css/home-benefit.css">
-    <link rel="stylesheet" href="css/kost-info.css">
-    <link rel="stylesheet" href="css/kost-benefit.css">
-    <link rel="stylesheet" href="css/paviliun-info.css">
-    <link rel="stylesheet" href="css/paviliun-benefit.css">
-    <link rel="stylesheet" href="css/ruko-info.css">
-    <link rel="stylesheet" href="css/ruko-benefit.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <!-- Favicon -->
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <!-- title -->
     <title>
@@ -63,7 +58,7 @@
       <section id="home-info">
         <div id="home-info-1">
               <div class="info-1-img"></div>
-              <div class="info-1-desc">
+              <div class="info-1-desc container">
                 <h2>Kost Putri<span class="brand-text">Izzatunnisa</span></h2>
                 <p>Menyediakan 42 kamar kost yang masing masing bisa berisi 1-3 orang. ada yang membersihkan lorong. grup kosan. dilarang mengajak teman pria</p>
               <a href="./pages/service-kost.html" class="btn btn-dark">lebih lanjut</a>
