--- a/pages/tentang.html
+++ b/pages/tentang.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- links -->
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/about-info.css">
+    <link rel="stylesheet" href="css/testimonials.css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+        <!-- title -->
     <title>
       about menceritakan sejarah hotel, lokasinhtel, visi misi konsep
     </title>
@@ -30,6 +35,7 @@
         </div>
       </nav>
     </header>
+    <main>
     <section id="about-info" class="bg-light py-3">
       <div class="container">
         <div class="info-left">
@@ -82,10 +88,38 @@
         </div>
       </div>
     </section>
+  </main>
+    <!-- footer -->
     <footer>
-      <div id="social-gallery"></div>
+      <div id="small-nav">
+        <ul>
+          <li>
+             <ul>
+              <li><a href="./pages/tentang.html">Tentang</a></li>
+              <li><a href="./pages/paket.html">promo</a></li>
+            </ul>
+          </li>
+          <li>
+          <ul>
+            <li><a href="./pages/service-kost.html">kost</a></li>
+            <li><a href="./pages/service-paviliun.html"> paviliun</a></li>
+            <li><a href="./pages/service-ruko.html"> ruko</a></li>
+          </ul>
+          </li>
+          <li>
+            <ul>
+              <li><a href="./pages/gallery.html"> gallery</a></li>
+              <li><a href="./pages/contact.html"> contact</a></li>
+            </ul>
+            </li>
+        <ul>
+      <!-- clear small-nav float class -->
+      <div class="clr"></div>
+      </div>
+      <div id="social-links">
+      </div>
       <div id="copyright">
-        <p>Hotel BT &copy; 2019, All RIghts Reserved</p>
+        <p>Izzatunnisa &copy; 2023, All RIghts Reserved</p>
       </div>
     </footer>
   </body>
