--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
   <head>
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/showcase.css">
-    <link rel="stylesheet" href="css/home-info.css">
-    <link rel="stylesheet" href="css/home-benefit.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <!-- Favicon -->
+    <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <!-- title -->
     <title>
@@ -82,17 +77,17 @@
         </div>
       </section>
       <section id="home-benefit">
-              <div class="box bg-dark">
+              <div id="benefit-1" class="box bg-dark">
                 <img src="./img/logo/fitur/archery-target-svgrepo-com.svg" alt="lokasi">
                 <h3>Dekat Kampus</h3>
                 <p>Terletak dekat dengan kampus Universitas Muhammadiyah Ssurakarta (UMS) dan International Hotel School (IHS)</p>
               </div>
-              <div class="box bg-light">
+              <div id="benefit-2" class="box bg-light">
                 <img src="./img/logo/fitur/ball-svgrepo-com.svg" alt="transportasi">
                 <h3>Dekat Bandara, Tol, dan Terminal</h3>
                 <p>Terletak di kelurahan gonilan yang dekat dengan bandara adi sucipto, terminal kartasura, dan pintu tol boyolali</p>
               </div>
-              <div class="box bg-dark">
+              <div id="benefit-3" class="box bg-dark">
                 <img src="./img/logo/fitur/arson-svgrepo-com.svg" alt="motor">
                 <h3>Parkir Motor</h3>
                 <p>Tersedia parkiran motor yang cukup untuk puluhan motor. Tidak tersedia parkir mobil kecuali sementara</p>
