--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -35,7 +35,7 @@
     <footer>
       <div id="social-gallery"></div>
       <div id="copyright">
-        <p>Hotel BT &copy; 2019, All RIghts Reserved</p>
+        <p>IKV &copy; 2023, All RIghts Reserved</p>
       </div>
     </footer>
   </body>
