--- a/pages/contact.html
+++ b/pages/contact.html
@@ -79,17 +79,17 @@
           <div class="box">
             <i class="fas fa-hotel fa-3x"></i>
             <h3>Location</h3>
-            <p>50 Main st, Boston MA</p>
+            <p>Jl Nuri, Tuwak Gonilan Kartasura Sukoharjo</p>
           </div>
           <div class="box">
             <i class="fas fa-phone fa-3x"></i>
             <h3>Phone Number</h3>
-            <p>(617) 555-5555</p>
+            <p>(+62) 889-8378-1542</p>
           </div>
           <div class="box">
             <i class="fas fa-envelope fa-3x"></i>
             <h3>Email Address</h3>
-            <p>frontdesk@hotelbt.co</p>
+            <p>frontdesk@izzatunnisa.co</p>
           </div>
         </div>
       </section>
@@ -97,7 +97,7 @@
     <footer>
       <div id="bottom-navigation"></div>
       <div id="copyright">
-        <p>Hotel BT &copy; 2019, All RIghts Reserved</p>
+        <p>IKV &copy; 2023, All RIghts Reserved</p>
       </div>
     </footer>
   </body>
