--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -9,7 +9,12 @@
   <body>
     <main>
         <div class="container">
-            
+            <div class="card-grid">
+              <div class="card">
+                <div class="card-img"></div>
+                <div class="card-desc"></div>
+              </div>
+            </div>
         </div>
     </main>
   </body>
