--- a/pages/tentang.html
+++ b/pages/tentang.html
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- links -->
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/about-info.css">
-    <link rel="stylesheet" href="css/testimonials.css">
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-        <!-- title -->
-    <title>
-      about menceritakan sejarah hotel, lokasinhtel, visi misi konsep
-    </title>
-  </head>
-  <body>
-    <header>
-      <nav id="navbar">
-        <div class="container">
-          <h1 class="logo"><a href="index.html">IKV</a></h1>
-          <ul>
-            <li><a href="#" class="current">Beranda</a></li>
-            <li><a href="#">Tentang</a></li>
-            <li>
-              Services
-              <ul>
-                <li><a href="#">Kost</a></li>
-                <li><a href="#">paviliun</a></li>
-                <li><a href="#">Ruko</a></li>
-              </ul>
-            </li>
-            <li><a href="#">kegiatan</a></li>
-            <li><a href="#">Hubungi Kami</a></li>
+
+<head>
+  <!-- meta -->
+  <meta name="description" content="">
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- links -->
+  <link rel="stylesheet" href="../css/main-styling.css">
+  <link rel="stylesheet" href="../css/header-footer.css">
+  <link rel="stylesheet" href="../css/about.css">
+  <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+  <!-- title -->
+  <title>
+    Tentang | Izzatunnisa kost and paviliun
+  </title>
+</head>
+<body>
+  <header>
+    <nav id="navbar">
+      <h1 class="logo"><a href="index.html">IKV</a></h1>
+      <ul class="navbar-main">
+        <li class="navbar-item"><a href="index.html" class="current-page">Beranda</a></li>
+        <li class="navbar-item"><a href="./tentang.html">Tentang</a></li>
+        <li class="navbar-item"><a href="./blogs.html">Blogs</a></li>
+        <li class="dropdown navbar-item"><a href="#"> Layanan</a>
+          <ul class="dropdown-content">
+            <li class="dropdown-item"><a href="./service-kost.html">Kost</a></li>
+            <li class="dropdown-item"><a href="./service-paviliun.html">paviliun</a></li>
+            <li class="dropdown-item"><a href="./service-ruko.html">Ruko</a></li>
           </ul>
-        </div>
-      </nav>
-    </header>
-    <main>
+        </li>
+        <li class="navbar-item"><a href="./gallery.html">Gallery</a></li>
+        <li class="navbar-item"><a href="./paket.html">Paket&promo</a></li>
+        <li class="navbar-item"><a href="./contact.html">Pusat Bantuan</a></li>
+      </ul>
+  </header>
+  <main>
     <section id="about-info" class="bg-light py-3">
       <div class="container">
         <div class="info-left">
@@ -89,38 +90,39 @@
       </div>
     </section>
   </main>
-    <!-- footer -->
-    <footer>
-      <div id="small-nav">
-        <ul>
-          <li>
-             <ul>
-              <li><a href="./pages/tentang.html">Tentang</a></li>
-              <li><a href="./pages/paket.html">promo</a></li>
-            </ul>
-          </li>
-          <li>
+  <!-- footer -->
+  <footer>
+    <div id="small-nav">
+      <ul>
+        <li>
           <ul>
-            <li><a href="./pages/service-kost.html">kost</a></li>
-            <li><a href="./pages/service-paviliun.html"> paviliun</a></li>
-            <li><a href="./pages/service-ruko.html"> ruko</a></li>
+            <li><a href="./tentang.html">Tentang</a></li>
+            <li><a href="./paket.html">promo</a></li>
           </ul>
-          </li>
-          <li>
-            <ul>
-              <li><a href="./pages/gallery.html"> gallery</a></li>
-              <li><a href="./pages/contact.html"> contact</a></li>
-            </ul>
-            </li>
+        </li>
+        <li>
+          <ul>
+            <li><a href="./service-kost.html">kost</a></li>
+            <li><a href="./service-paviliun.html"> paviliun</a></li>
+            <li><a href="./service-ruko.html"> ruko</a></li>
+          </ul>
+        </li>
+        <li>
+          <ul>
+            <li><a href="./gallery.html"> gallery</a></li>
+            <li><a href="./contact.html"> contact</a></li>
+          </ul>
+        </li>
         <ul>
-      <!-- clear small-nav float class -->
-      <div class="clr"></div>
-      </div>
-      <div id="social-links">
-      </div>
-      <div id="copyright">
-        <p>Izzatunnisa &copy; 2023, All RIghts Reserved</p>
-      </div>
-    </footer>
-  </body>
+          <!-- clear small-nav float class -->
+          <div class="clr"></div>
+    </div>
+    <div id="social-links">
+    </div>
+    <div id="copyright">
+      <p>Izzatunnisa &copy; 2023, All RIghts Reserved</p>
+    </div>
+  </footer>
+</body>
+
 </html>
